transition small fix

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -15,8 +15,8 @@
 	line-height: 5em;
 	float: right;
 	margin-right: 6.5em;
-	-webkit-transition: all 300ms ease;
-	        transition: all 300ms ease;
+	        transition: line-height 300ms ease,
+	        			margin-right 300ms ease;
 }
 
 .transitionScrollLinks {
